# stkcontrol

./: setup.py  stkcontrol.py  stktoy.py
src/: CMakeLists.txt  InstrumentBank.cpp  InstrumentBank.h  main.cpp  stkcontrol.cpp  stkcontrol.h
stkcontrol/: __init__.py  stkcontrol.py
